--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "formik": "^2.4.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-cookie": "^7.0.1",
     "react-dom": "^18.2.0",
